; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_sched_setpriority.c_priv_sched_setpriority_myproc.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_sched_setpriority.c_priv_sched_setpriority_myproc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test = type { i32 }

@PRIO_PROCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"priv_sched_setpriority_myproc(asroot, injail)\00", align 1
@EACCES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [47 x i8] c"priv_sched_setpriority_myproc(asroot, !injail)\00", align 1
@.str.2 = private unnamed_addr constant [47 x i8] c"priv_sched_setpriority_myproc(!asroot, injail)\00", align 1
@.str.3 = private unnamed_addr constant [48 x i8] c"priv_sched_setpriority_myproc(!asroot, !injail)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @priv_sched_setpriority_myproc(i32 %0, i32 %1, %struct.test* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.test*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.test* %2, %struct.test** %6, align 8
  %8 = load i32, i32* @PRIO_PROCESS, align 4
  %9 = call i32 @setpriority(i32 %8, i32 0, i32 -1)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @EACCES, align 4
  %18 = call i32 @expect(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %16, i32 -1, i32 %17)
  br label %19

19:                                               ; preds = %15, %12, %3
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %19
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @expect(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0), i32 %26, i32 0, i32 0)
  br label %28

28:                                               ; preds = %25, %22, %19
  %29 = load i32, i32* %4, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %38, label %31

31:                                               ; preds = %28
  %32 = load i32, i32* %5, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* @EACCES, align 4
  %37 = call i32 @expect(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0), i32 %35, i32 -1, i32 %36)
  br label %38

38:                                               ; preds = %34, %31, %28
  %39 = load i32, i32* %4, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %48, label %41

41:                                               ; preds = %38
  %42 = load i32, i32* %5, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %48, label %44

44:                                               ; preds = %41
  %45 = load i32, i32* %7, align 4
  %46 = load i32, i32* @EACCES, align 4
  %47 = call i32 @expect(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.3, i64 0, i64 0), i32 %45, i32 -1, i32 %46)
  br label %48

48:                                               ; preds = %44, %41, %38
  ret void
}

declare dso_local i32 @setpriority(i32, i32, i32) #1

declare dso_local i32 @expect(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
